# magic_shell

./: CHANGELOG.md  LICENSE  PR1_STATUS.md  PR2_STATUS.md  PR3_STATUS.md  PR4_STATUS.md  README.md  main.py  pyproject.toml  test_registry.py
.github/workflows/: ci.yml
core/: commands.py  history.py  shell.py
magic_shell/: __init__.py  main.py
magic_shell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
magic_shell/core/: __init__.py  bridge.py  commands.py  config.py  executor.py  hooks.py  registry.py  shell.py  shell_detect.py  theme.py
magic_shell/spells/: demo.py  wizard.py
magic_shell/utils/: colors.py  prompt.py  welcome.py
spells/: wizard.py
tests/: __init__.py  test_enhanced_features.py  test_main.py  test_pr4_visual_effects.py  test_pty_bridge.py  test_shell.py  test_shell_hooks.py
utils/: prompt.py  welcome.py
