[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-shell"
version = "0.1.0"
description = "A magical command-line shell with enhanced features and whimsical spells"
authors = [
    {name = "Robin Oscarsson", email = "robin@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
keywords = ["shell", "cli", "repl", "magic", "terminal"]
dependencies = [
    "prompt-toolkit>=3.0.0",
    "rich>=10.0.0",
    "tomli>=1.2.0; python_version<'3.11'",  # tomllib is built-in from Python 3.11+
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "ruff>=0.1.0",
    "black>=22.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/robinoscarsson/magic_shell"
Repository = "https://github.com/robinoscarsson/magic_shell"
"Bug Tracker" = "https://github.com/robinoscarsson/magic_shell/issues"

[project.scripts]
magic-shell = "magic_shell.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["magic_shell*"]

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ['py38']
include = '\.pyi?$'
line-length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]